fix(ajapaik): min height of map container causes a whitespace between image and other containers

--- a/ajapaik/ajapaik/static/css/ajp-style.css
+++ b/ajapaik/ajapaik/static/css/ajp-style.css
@@ -1194,7 +1194,6 @@ a.fullscreen {
 #ajp-photo-modal-map-canvas {
   height: calc(100% - 25px);
   max-height: 99%;
-  min-height: 300px;
   position: relative;
 }
 
